--- a/web/public/footer.html
+++ b/web/public/footer.html
@@ -15,11 +15,11 @@
          <div class="col l2 offset-l1 s12">
             <h5 class="white-text">Contactanos</h5>
             <ul>
-               <li><a class="grey-text text-lighten-3" href="https://twitter.com/ElclubdelaLect1">
+               <li><a class="grey-text text-lighten-3" href="https://twitter.com/ElclubdelaLect1" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                   <i class="fab fa-twitter"></i>
                   Twitter</a>
                </li>
-               <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/readclubull/">
+               <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/readclubull/" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                   <i class="fab fa-instagram"></i>
                   Instagram</a>
                </li>
@@ -29,11 +29,11 @@
             <h5 class="white-text">Mapa web</h5>
             <p id="descripcion" class="grey-text text-lighten-4">
               <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="añadirlibros.html">Añadir libros</a></li>
-                <li><a href="catalogo.html">Catálogo</a></li>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="signup.html">Signup</a></li>
+                <li><a href="index.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Inicio</a></li>
+                <li><a href="añadirlibros.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Añadir libros</a></li>
+                <li><a href="catalogo.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
+                <li><a href="login.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Login</a></li>
+                <li><a href="signup.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Signup</a></li>
               </ul>
             </p>
          </div>
