--- a/web/public/login.html
+++ b/web/public/login.html
@@ -31,37 +31,39 @@
                 };
                 firebase.initializeApp(config);
         </script>
-        
-        <script
-          src="https://code.jquery.com/jquery-3.3.1.js"
-          integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-          crossorigin="anonymous">
-        </script>
+
         <script>
           $(function(){
             $("#footer").load("footer.html");
           });
         </script>
 
+        <script>
+         function toggleFocus(el)
+         {
+          el.style.backgroundColor =  el.style.backgroundColor=="yellow" ? "inherit" : "yellow";
+         }
+        </script>
+
     </head>
     <body>
         <nav>
             <div class="nav-wrapper">
-               <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
+               <a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="index.html" class="brand-logo"><img onfocus="toggleFocus(this)" onblur="toggleFocus(this)" id="logo-pag" src="img/logo-b.png"></img></a>
                <ul class="right hide-on-med-and-down" id="barra">
-                  <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-                  <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-                  <li><a href="añadirlibros.html">Añadir Libros</a></li>
-                  <li><a href="login.html">Log In</a></li>
-                  <li><a href="signup.html">Sign Up</a></li>
-                  <li><a href="signup.html">Log Out</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="novedades.html">Ver Ultimas Novedades</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="recomendacion.html">Recomendacion de libros</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="añadirlibros.html">Añadir Libros</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="login.html">Log In</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="signup.html">Sign Up</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="signup.html">Log Out</a></li>
                   <li>
                      <div class="center row">
                         <div class="col s12 ">
                            <div class="row" id="topbarsearch">
                               <div class="input-field col s6 s12 red-text">
                                  <i class="white-text material-icons prefix"></i>
-                                 <input type="text" aria-labelledby="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                                 <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
                               </div>
                            </div>
                         </div>
@@ -74,29 +76,29 @@
             <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl3">
                 <div class=formulario method="POST" action="index.html">
                     <label for="name">Nombre</label>
-                    <input type="text" aria-labelledby="nombre" id="name" name="name">
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="nombre" id="name" name="name">
                     <label for="surname">1º Apellido</label>
-                    <input type="text" aria-labelledby="apellido" id="surname1" name="surname1">
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="apellido" id="surname1" name="surname1">
                     <label for="mail">Dirección de correo electrónico</label>
-                    <input type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
                     <label for="password">Contraseña</label>
-                    <input type="password" aria-labelledby="constraseña" aria-required="true" id="pass" name="pass" required>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="password" aria-labelledby="constraseña" aria-required="true" id="pass" name="pass" required>
                     <p>Please select your sex:</p>
                     <p>
                         <label>
-                            <input name="group1" type="radio" aria-labelledby="sexo masculino"/>
+                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="radio" aria-labelledby="sexo masculino"/>
                             <span>Male</span>
                         </label>
                     </p>
                     <p>
                         <label>
-                            <input name="group1" type="radio" aria-labelledby="sexo femenino"/>
+                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="radio" aria-labelledby="sexo femenino"/>
                             <span>Female</span>
                         </label>
                     </p>
                     <p>
                         <label>
-                            <input name="group1" type="radio" aria-labelledby="sexo sin especificar"/>
+                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="radio" aria-labelledby="sexo sin especificar"/>
                             <span>Other</span>
                         </label>
                     </p>
@@ -105,14 +107,15 @@
             </div>
         </div>
 
+        <div id="footer"></div>
+
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-     <!-- <script type='text/javascript' src="javascript/func.js"></script>-->
-     <!-- <script type='text/javascript' src="javascript/firebase.js"></script>-->
-      <script type='text/javascript' src="javascript/auth.js"></script>
-      <script src="javascript/func.js"></script>
+        <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <!-- <script type='text/javascript' src="javascript/func.js"></script>-->
+        <!-- <script type='text/javascript' src="javascript/firebase.js"></script>-->
+        <script type='text/javascript' src="javascript/auth.js"></script>
+        <script src="javascript/func.js"></script>
     </body>
 
-    <div id="footer"></div>
 
 </html>
