--- a/web/public/registro.html
+++ b/web/public/registro.html
@@ -32,12 +32,20 @@
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
         crossorigin="anonymous">
       </script>
+
       <script>
         $(function(){
           $("#footer").load("footer.html");
       });
       </script>
-      
+  
+      <script>
+       function toggleFocus(el)
+       {
+        el.style.backgroundColor =  el.style.backgroundColor=="yellow" ? "inherit" : "yellow";
+       }
+      </script>
+
    </head>
    <body>
       <nav>
