--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -37,31 +37,39 @@
           integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
           crossorigin="anonymous">
         </script>
+
         <script>
           $(function(){
             $("#footer").load("footer.html");
           });
         </script>
 
+        <script>
+         function toggleFocus(el)
+         {
+          el.style.backgroundColor =  el.style.backgroundColor=="yellow" ? "inherit" : "yellow";
+         }
+        </script>
+
     </head>
     <body>
         <nav>
             <div class="nav-wrapper">
-               <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
+               <a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
                <ul class="right hide-on-med-and-down" id="barra">
-                  <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-                  <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-                  <li><a href="añadirlibros.html">Añadir Libros</a></li>
-                  <li><a href="login.html">Log In</a></li>
-                  <li><a href="signup.html">Sign Up</a></li>
-                  <li><a href="signup.html">Log Out</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="novedades.html">Ver Ultimas Novedades</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="recomendacion.html">Recomendacion de libros</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="añadirlibros.html">Añadir Libros</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="login.html">Log In</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="signup.html">Sign Up</a></li>
+                  <li><a onfocus="toggleFocus(this)" onblur="toggleFocus(this)" href="signup.html">Log Out</a></li>
                   <li>
                      <div class="center row">
                         <div class="col s12 ">
                            <div class="row" id="topbarsearch">
                               <div class="input-field col s6 s12 red-text">
                                  <i class="white-text material-icons prefix"></i>
-                                 <input type="text" aria-labelledby="buscar" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                                 <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="buscar" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
                               </div>
                            </div>
                         </div>
@@ -74,9 +82,9 @@
             <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl3">
                 <div href="index.html" method="POST">
                     <label for="mail">Dirección de correo electrónico</label>
-                    <input type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
                     <label for="password">Contraseña</label>
-                    <input type="password" aria-labelledby="constraseña" aria-required="true" id="pass" name="pass" required>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="password" aria-labelledby="constraseña" aria-required="true" id="pass" name="pass" required>
                     <button id="signin" onclick="signin()">Enviar</button>
                 </div>
             </div>
