--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
-    <head>
+   <head>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
       <title>Club de la Lectura</title>
       <meta http-equiv="content-type"/>
       <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=yes"/>
@@ -18,7 +20,9 @@
 
          gtag('config', 'UA-131489316-3');
       </script>
-      <script src="https://www.gstatic.com/firebasejs/5.8.4/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
       <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-database.js"></script>
       <script>
         // Initialize Firebase
@@ -80,37 +84,97 @@
                </ul>
          </div>
       </nav>
-        <div class="row">
-            <div class="cols8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl3">
-                <form class="formulario" aria-label="Formulario añadir libros" method="post" onsubmit="return false">
+      <div id="background" class="center row" role="header">
+         <div class="col s12 m12 l12 xl12">
+            <h1 class="titulo" aria-label="titulo">El club de Lectura</h1>
+         </div>
+      </div>
 
-                    <p>* Titulo: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" aria-live="assertive" aria-label="Titulo libro"/></p>
+      <div id="anadir-libros" class="center row" role="main">
+            <div class="center row" style="min-height:600px;">
+            <h2 class="titulo-anadir-libro" aria-label="titulo">Añade tu libro favorito!</favorito!></h2>
+            <div class="col s8 offset-s2 m8 offset-m2 l7 offset-l2 xl4 offset-xl4">
+                <form class="formulario" aria-label="Formulario añadir libros" method="post" onsubmit="return false">
+                    <p>* Titulo: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-label="El señor de los Anillos" placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" aria-live="assertive" aria-label="Titulo libro"/></p>
                     <span id="alerta-title" role="tooltip" aria-live="assertive"> </span>
-                    <p>* Autor: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-placeholder="J.R.Tolkien" id="nombre" aria-required="true" aria-describedby="alerta-autor" aria-live="assertive" aria-label="Autor libro"/></p>
+                    <p>* Autor: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-label="J.R.Tolkien" placeholder="J.R.Tolkien" id="nombre" aria-required="true" aria-describedby="alerta-autor" aria-live="assertive" aria-label="Autor libro"/></p>
                     <span id="alerta-autor" role="tooltip" aria-live="assertive"> </span>
-                    <p>Año: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" aria-placeholder="1992" id="agnos" aria-describedby="alerta-agno" aria-live="assertive" aria-label="Año libro"></p>
+                    <p>Año: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" aria-label="1992" placeholder="1992" id="agnos" aria-describedby="alerta-agno" aria-live="assertive" aria-label="Año libro"></p>
                     <span id="alerta-agno" role="tooltip" aria-live="assertive"> </span>
-                    <p>* Genero: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" title="Aventuras,Comedia,Ficcion,Historica" pattern=".{7,10}" aria-placeholder="Aventuras" id="genero" aria-required="true" aria-describedby="alerta-genero" aria-live="assertive" aria-label="Genero libro"/></p>
+                    <p>* Genero: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" title="Comedia,Aventura,Policiaca,Historia,Ficcion,Clasicos" pattern=".{7,10}" aria-label="Comedia,Aventura,Policiaca,Historia,Ficcion,Clasicos" placeholder = "Comedia/Aventura/Policiaca/Historia/Ficcion/Clasicos"id="genero" aria-required="true" aria-describedby="alerta-genero" aria-live="assertive" aria-label="Genero libro"/></p>
                     <span id="alerta-genero" role="tooltip" aria-live="assertive"> </span>
-                    <p>ISBN: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" id="isbn" aria-placeholder="1578347859023" minlength="13" maxlength="13" aria-describedby="alerta-isbn" aria-live="assertive" aria-label="ISBN libro"></p>
+                    <p>ISBN: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" id="isbn" aria-label="1578347859023" placeholder="1578347859023" minlength="13" maxlength="13" aria-describedby="alerta-isbn" aria-live="assertive" aria-label="ISBN libro"></p>
                     <span id="alerta-isbn" role="tooltip"aria-live="assertive"> </span>
+                    <form action="#" method="post" enctype="multipart/form-data">
+                     <div class="file-field input-field">
+                        <div class="btn">
+                        <span>Imagen</span>
+                        <input type="file">
+                        </div>
+                        <div class="file-path-wrapper">
+                        <input id="imagen-libro" class="file-path validate" type="file" aria-label="Añadir imagen del libro" onchange="loadImageFile();" placeholder="Añadir imagen del libro">
+                        <img id="img-libro" src="" alt="">
+                        </div>
+                     </div>
+                     </form>
+                     <span id="alerta-imagen" role="tooltip"aria-live="assertive"> </span>
                     <span id="libro-added"> </span>
-                    <p>
+                    <div id = "botones-libros">
                         <button onfocus="toggleFocus(this)" onblur="toggleFocus(this)" aria-pressed="false" tabindex="0" class="btn waves-effect waves-light" type="submit" id="submit" value="Enviar" alt="Boton Submit">Submit
-                          <i class="material-icons right">send</i>
+                        <i class="material-icons right">send</i>
                         </button>
                         <button onfocus="toggleFocus(this)" onblur="toggleFocus(this)" aria-pressed="false" tabindex="0" class="btn waves-effect waves-light" type="reset" id="reset" value="Borrar" alt="Boton Reset">Reset
                         <i class="material-icons right">delete</i>
                         </button>
-                    </p>
+                    </div>
                     <br>
                     <p id="texto-oblig">Los campos con * son obligatorios</p>
                 </form>
             </div>
+         </div>
+         </div>
+      <footer class="page-footer" role="contentinfo" aria-label="Footer" style="position:absoulte;bottom:0;width:100%">
+        <div class="container">
+           <div class="center row">
+              <div class="col l4 s12">
+                 <h5 class="white-text">Quienes somos</h5>
+                 <p class="grey-text text-lighten-4">
+                    Somos una biblioteca digital donde podrás encontar una amplia variedad de libros, comentarlos con el resto de usuarios, apuntar eventos...
+                 </p>
+              </div>
+              <div class="col l4 offset-l1 s12">
+                 <h5 class="white-text">Ubicación</h5>
+                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
+                 <p><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
+              </div>
+              <div class="col l2 offset-l1 s12">
+                 <h5 class="white-text">Contactanos</h5>
+                 <ul>
+                    <li><a class="grey-text text-lighten-3" href="#!">
+                       <i class="fab fa-twitter"></i>    
+                       Twitter</a>
+                    </li>
+                    <li><a class="grey-text text-lighten-3" href="#!">
+                       <i class="fab fa-instagram"></i>
+                       Instagram</a>
+                    </li>
+                    <li><a class="grey-text text-lighten-3" href="#!">
+                       <i class="fab fa-facebook"></i>Facebook</a>
+                    </li>
+                 </ul>
+              </div>
+           </div>
         </div>
-    </body>
-    <div id="footer"></div>
+        <div class="footer-copyright">
+           <div class="container">
+              © 2019 Copyright Text
+           </div>
+        </div>
+        <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script type='text/javascript' src="javascript/firebase.js"></script>
         <script type='text/javascript' src="javascript/func.js"></script>
-
+        <script src="//static.filestackapi.com/filestack-js/1.x.x/filestack.min.js"></script>
+     </footer>
+    </body>
 </html>
