mantener lista con todos los autores+titulos

--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -112,7 +112,7 @@
                         <input type="file">
                         </div>
                         <div class="file-path-wrapper">
-                        <input id="imagen-libro" class="file-path validate" type="file" aria-label="Añadir imagen del libro" onchange="loadImageFile();" placeholder="Añadir imagen del libro">
+                        <input id="imagen-libro" class="file-path validate" type="file" aria-label="Añadir imagen del libro" onchange="loadImageFile();" placeholder="Añadir imagen del libro" style="max-heigth:300px;">
                         <img id="img-libro" src="" alt="">
                         </div>
                      </div>
