--- a/web/public/index.html
+++ b/web/public/index.html
@@ -68,8 +68,7 @@
       <nav role="custom-dropdown" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"><img id="logo-pag" src="img/logo-b.png"></img></a>
-            <input type="checkbox" id="button-dropdown" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
-            <label for="button-dropdown" onclick></label>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down" id="barra" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                <li><a href="catalogo.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
                <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Ver Ultimas Novedades</a></li>
@@ -93,6 +92,29 @@
                </ul>
          </div>
       </nav>
+
+      <ul class="sidenav" id="mobile-demo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
+               <li><a href="catalogo.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
+               <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Ver Ultimas Novedades</a></li>
+               <li><a href="recomendacion.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Recomendacion de libros</a></li>
+               <li><a href="añadirlibros.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Añadir Libros</a></li>
+               <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Sign Up</a></li>
+               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log In</a></li>
+               <li><a href="#!" id="logout" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log Out</a></li>
+               <li>
+                  <div class="center row">
+                     <div class="col s12 ">
+                        <div class="row" id="topbarsearch">
+                           <div class="input-field col s6 s12 red-text">
+                              <i class="white-text material-icons prefix"></i>
+                              <input type="text" aria-label="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+               </ul>   
+      
       <div id="background" class="center row" role="header">
          <div class="col s12 m12 l12 xl12">
             <h1 class="titulo" aria-label="titulo">El club de Lectura</h1>
@@ -119,7 +141,7 @@
          </div>
          <div class="col s12 m3 l3 xl3">
             <h1 class="categoria"> Categorias </h1>
-            <ul id="categorias" class="collapsible" role="list" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
+            <ul id="categorias" class="collapsible popout" role="list" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                <li>
                   <div class="collapsible-header"><i class="fab fa-fort-awesome"></i>Aventura</div>
                   <div class="collapsible-body"><span>La novela de aventuras es un género literario que narra los viajes, el misterio y el riesgo. Una característica recurrente es la acción presente hasta dominar los escenarios, básica para el desarrollo de la trama.</span></div>
@@ -137,7 +159,7 @@
                   <div class="collapsible-body"><span>Ciencia ficción es la denominación de uno de los géneros derivados de la literatura de ficción, junto con la literatura fantástica y la narrativa de terror.Es un género especulativo que relata acontecimientos posibles desarrollados en un marco imaginario, cuya verosimilitud se fundamenta narrativamente en los campos de las ciencias físicas, naturales y sociales</span></div>
                </li>
                <li>
-                  <div class="collapsible-header"><i class="fas fa-book"></i>Clasicos Universales</div>
+                  <div class="collapsible-header" ><i class="fas fa-book"></i>Clasicos Universales</div>
                   <div class="collapsible-body"><span>La Biblioteca Mundial es una lista de los 100 mejores libros de la historia, según lo propuesto por 100 escritores de 54 países diferentes, recopiladas y organizadas en el año 2002 por el Club del Libro Noruego</span></div>
                </li>
             </ul>
@@ -260,6 +282,7 @@
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script type='text/javascript' src="javascript/func.js"></script>
+      <script type='text/javascript' src="javascript/firebase.js"></script>
       <script>
           const Calender = document.querySelector('.datepicker');
           M.Datepicker.init(Calender,{});
