--- a/web/public/registro.html
+++ b/web/public/registro.html
@@ -48,25 +48,25 @@
 
    </head>
    <body>
-      <nav>
+      <nav role="custom-dropdown" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo"><img id="logo-pag" src="img/logo-b.png"></img></a>
-            <ul class="right hide-on-med-and-down">
-               <li><a href="novedades.html">Ver Ultimas Novedades</a></li>
-               <li><a href="recomendacion.html">Recomendacion de libros</a></li>
-               <li><a href="registro.html">Ejemplo</a></li>
-               <li><a class="dropdown-trigger" href="#" data-target="dropdown-login">Acceder<i class="material-icons right">adjust</i></a></li>
-               <ul id="dropdown1" class="dropdown-content">
-                  <li><a href="#!"><i class="material-icons">all_inclusive</i>Login</a></li>
-                  <li><a href="#!"><i class="material-icons">hourglass_empty</i>Registrarse</a></li>
-                </ul>
-                  <li>
+            <a href="index.html" class="brand-logo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"><img id="logo-pag" src="img/logo-b.png"></img></a>
+            <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+            <ul class="right hide-on-med-and-down" id="barra" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
+               <li><a href="catalogo.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
+               <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Ver Ultimas Novedades</a></li>
+               <li><a href="recomendacion.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Recomendacion de libros</a></li>
+               <li><a href="añadirlibros.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Añadir Libros</a></li>
+               <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Sign Up</a></li>
+               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log In</a></li>
+               <li><a href="#!" id="logout" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log Out</a></li>
+               <li>
                   <div class="center row">
                      <div class="col s12 ">
                         <div class="row" id="topbarsearch">
                            <div class="input-field col s6 s12 red-text">
                               <i class="white-text material-icons prefix"></i>
-                              <input type="text" aria-labelledby="buscar" placeholder="search" id="autocomplete-input" class="autocomplete white-text">
+                              <input type="text" aria-label="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                            </div>
                         </div>
                      </div>
@@ -75,6 +75,28 @@
                </ul>
          </div>
       </nav>
+
+      <ul class="sidenav" id="mobile-demo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
+               <li><a href="catalogo.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
+               <li><a href="novedades.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Ver Ultimas Novedades</a></li>
+               <li><a href="recomendacion.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Recomendacion de libros</a></li>
+               <li><a href="añadirlibros.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Añadir Libros</a></li>
+               <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Sign Up</a></li>
+               <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log In</a></li>
+               <li><a href="#!" id="logout" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log Out</a></li>
+               <li>
+                  <div class="center row">
+                     <div class="col s12 ">
+                        <div class="row" id="topbarsearch">
+                           <div class="input-field col s6 s12 red-text">
+                              <i class="white-text material-icons prefix"></i>
+                              <input type="text" aria-label="barra de navegacion" placeholder="search" id="autocomplete-input" class="autocomplete white-text" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </li>
+               </ul> 
       <div id="background" class="center row">
          <div class="col s12 m12 l12 xl12">
             <h1 class="titulo">El club de Lectura</h1>
@@ -127,6 +149,7 @@
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="func.js"></script>
+      <script type='text/javascript' src="javascript/firebase.js"></script>
       <script>
           const Calender = document.querySelector('.datepicker');
           M.Datepicker.init(Calender,{});
