--- a/web/public/footer.html
+++ b/web/public/footer.html
@@ -29,11 +29,11 @@
             <h5 class="white-text">Mapa web</h5>
             <p id="descripcion" class="grey-text text-lighten-4">
               <ul>
-                <li><a href="index.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Inicio</a></li>
-                <li><a href="añadirlibros.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Añadir libros</a></li>
-                <li><a href="catalogo.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
-                <li><a href="login.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Login</a></li>
-                <li><a href="signup.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Signup</a></li>
+                <li><a class="mapa-web" href="index.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Inicio</a></li>
+                <li><a class="mapa-web" href="añadirlibros.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Añadir libros</a></li>
+                <li><a class="mapa-web" href="catalogo.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
+                <li><a class="mapa-web" href="login.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Login</a></li>
+                <li><a class="mapa-web" href="signup.html" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Signup</a></li>
               </ul>
             </p>
          </div>
