--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -119,15 +119,15 @@
             <h2 class="titulo-anadir-libro" aria-label="titulo">Añade tu libro favorito!</favorito!></h2>
             <div class="col s8 offset-s2 m8 offset-m2 l7 offset-l2 xl4 offset-xl4">
                 <form class="formulario" aria-label="Formulario añadir libros" method="post" onsubmit="return false">
-                    <p>* Titulo: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-label="El señor de los Anillos" placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" aria-live="assertive" aria-label="Titulo libro"/></p>
+                    <p class ="anadir-form">* Titulo: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-label="El señor de los Anillos" placeholder="El señor de los Anillos" id="libro" aria-required="true" aria-describedby="alerta-title" aria-live="assertive" aria-label="Titulo libro"/></p>
                     <span id="alerta-title" role="tooltip" aria-live="assertive"> </span>
-                    <p>* Autor: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-label="J.R.Tolkien" placeholder="J.R.Tolkien" id="nombre" aria-required="true" aria-describedby="alerta-autor" aria-live="assertive" aria-label="Autor libro"/></p>
+                    <p class ="anadir-form">* Autor: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-label="J.R.Tolkien" placeholder="J.R.Tolkien" id="nombre" aria-required="true" aria-describedby="alerta-autor" aria-live="assertive" aria-label="Autor libro"/></p>
                     <span id="alerta-autor" role="tooltip" aria-live="assertive"> </span>
-                    <p>Año: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" aria-label="1992" placeholder="1992" id="agnos" aria-describedby="alerta-agno" aria-live="assertive" aria-label="Año libro"></p>
+                    <p class ="anadir-form">Año: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" aria-label="1992" placeholder="1992" id="agnos" aria-describedby="alerta-agno" aria-live="assertive" aria-label="Año libro"></p>
                     <span id="alerta-agno" role="tooltip" aria-live="assertive"> </span>
-                    <p>* Genero: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" title="Comedia,Aventura,Policiaca,Historia,Ficcion,Clasicos" pattern=".{7,10}" aria-label="Comedia,Aventura,Policiaca,Historia,Ficcion,Clasicos" placeholder = "Comedia/Aventura/Policiaca/Historia/Ficcion/Clasicos"id="genero" aria-required="true" aria-describedby="alerta-genero" aria-live="assertive" aria-label="Genero libro"/></p>
+                    <p class ="anadir-form">* Genero: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" title="Comedia,Aventura,Policiaca,Historia,Ficcion,Clasicos" pattern=".{7,10}" aria-label="Comedia,Aventura,Policiaca,Historia,Ficcion,Clasicos" placeholder = "Comedia/Aventura/Policiaca/Historia/Ficcion/Clasicos"id="genero" aria-required="true" aria-describedby="alerta-genero" aria-live="assertive" aria-label="Genero libro"/></p>
                     <span id="alerta-genero" role="tooltip" aria-live="assertive"> </span>
-                    <p>ISBN: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" id="isbn" aria-label="1578347859023" placeholder="1578347859023" minlength="13" maxlength="13" aria-describedby="alerta-isbn" aria-live="assertive" aria-label="ISBN libro"></p>
+                    <p class ="anadir-form">ISBN: <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="number" id="isbn" aria-label="1578347859023" placeholder="1578347859023" minlength="13" maxlength="13" aria-describedby="alerta-isbn" aria-live="assertive" aria-label="ISBN libro"></p>
                     <span id="alerta-isbn" role="tooltip"aria-live="assertive"> </span>
                     <form action="#" method="post" enctype="multipart/form-data">
                      <div class="file-field input-field">
@@ -169,7 +169,7 @@
               <div class="col l4 offset-l1 s12">
                  <h5 class="white-text">Ubicación</h5>
                  <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
-                 <p><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
+                 <p class="lugar"><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
               </div>
               <div class="col l2 offset-l1 s12">
                  <h5 class="white-text">Contactanos</h5>
