--- a/web/public/login.html
+++ b/web/public/login.html
@@ -47,7 +47,7 @@
 
     </head>
     <body>
-        <nav role="custom-dropdown" aria-label="Top Menu Bar">
+       <nav role="custom-dropdown" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"><img id="logo-pag" src="img/logo-b.png"></img></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -95,40 +95,49 @@
                      </div>
                   </div>
                </li>
-               </ul> 
+               </ul>  
+      
+      <div id="background" class="center row" role="header">
+         <div class="col s12 m12 l12 xl12">
+            <h1 class="titulo" aria-label="titulo">El club de Lectura</h1>
+         </div>
+      </div>
         <div class="row">
-            <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl3">
+            <div class="center row" style="min-height:600px;">
+            <h2 class="titulo-signup-libro" aria-label="Sign Up" style="font-size:30px;margin-bottom:50px;">Sign Up!</h2>
+            <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl4">
                 <div class=formulario method="POST" action="index.html">
-                    <label for="name">Nombre</label>
-                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="nombre" id="name" name="name">
-                    <label for="surname">1º Apellido</label>
-                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="apellido" id="surname1" name="surname1">
-                    <label for="mail">Dirección de correo electrónico</label>
-                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
-                    <label for="password">Contraseña</label>
-                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="password" aria-labelledby="constraseña" aria-required="true" id="pass" name="pass" required>
-                    <p>Please select your sex:</p>
-                    <p>
+                    <label for="name" style="font-size:20px;">Nombre</label>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="nombre" placeholder="Juan" id="name" name="name">
+                    <label for="surname" style="font-size:20px;" >1º Apellido</label>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="apellido" placeholder="Garcia" id="surname1" name="surname1">
+                    <label for="mail" style="font-size:20px;">Dirección de correo electrónico*</label>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="email" aria-labelledby="email" aria-required="true" placeholder="juang@yahoo.com" id="mail" name="mail" required>
+                    <label for="password" style="font-size:20px;">Contraseña*</label>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="password" aria-labelledby="constraseña" placeholder="xxxx" aria-required="true" id="pass" name="pass" required>
+                    <p style="text-align:center;" style="font-size:20px;">Please select your sex:</p>
+                    <p style="text-align:center;">
                         <label>
-                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="radio" aria-labelledby="sexo masculino"/>
+                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="checkbox" aria-labelledby="sexo masculino"/>
                             <span>Male</span>
                         </label>
                     </p>
-                    <p>
+                    <p style="text-align:center;">
                         <label>
-                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="radio" aria-labelledby="sexo femenino"/>
+                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="checkbox" aria-labelledby="sexo femenino"/>
                             <span>Female</span>
                         </label>
                     </p>
-                    <p>
+                    <p style="text-align:center;">
                         <label>
-                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="radio" aria-labelledby="sexo sin especificar"/>
+                            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" name="group1" type="checkbox" aria-labelledby="sexo sin especificar"/>
                             <span>Other</span>
                         </label>
                     </p>
-                    <button id="aut" onclick="register()">Enviar</button>
+                    <a id="aut" onclick="register()" class="waves-effect waves-light btn"><i class="material-icons left">send</i>Sign Up!</a>
                 </div>
             </div>
+        </div>
         </div>
 
         <div id="footer"></div>
@@ -137,7 +146,13 @@
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script type='text/javascript' src="javascript/firebase.js"></script>
         <script type='text/javascript' src="javascript/auth.js"></script>
-        <script src="javascript/func.js"></script>
+        <script type='text/javascript' src="javascript/func.js"></script>
+        <script>
+        $(document).ready(function() {  
+         $("#footer").load("footer.html");
+         });
+      </script>
+        
     </body>
 
 
