--- a/web/public/signup.html
+++ b/web/public/signup.html
@@ -39,12 +39,6 @@
         </script>
 
         <script>
-          $(function(){
-            $("#footer").load("footer.html");
-          });
-        </script>
-
-        <script>
          function toggleFocus(el)
          {
           el.style.backgroundColor =  el.style.backgroundColor=="yellow" ? "inherit" : "yellow";
@@ -101,26 +95,40 @@
                      </div>
                   </div>
                </li>
-               </ul> 
+               </ul>   
+      
+      <div id="background" class="center row" role="header">
+         <div class="col s12 m12 l12 xl12">
+            <h1 class="titulo" aria-label="titulo">El club de Lectura</h1>
+         </div>
+      </div>
         <div class="row">
-            <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl3">
+        <div class="center row" style="min-height:600px;">
+            <h2 class="titulo-login-libro" aria-label="Log In" style="font-size:30px;">Log In</favorito!></h2>
+            <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl4">
                 <div href="index.html" method="POST">
-                    <label for="mail">Dirección de correo electrónico</label>
-                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="email" aria-labelledby="email" aria-required="true" id="mail" name="mail" required>
-                    <label for="password">Contraseña</label>
-                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="password" aria-labelledby="constraseña" aria-required="true" id="pass" name="pass" required>
-                    <button id="signin" onclick="signin()">Enviar</button>
+                    <label for="mail" style="font-size:20px;">Dirección de correo electrónico</label>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="email" aria-labelledby="email" aria-required="true" placeholder="a@yahoo.com" id="mail" name="mail" required>
+                    <label for="password" style="font-size:20px;" >Contraseña</label>
+                    <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="password" aria-labelledby="constraseña" aria-required="true" placeholder="xxxx" id="pass" name="pass" required>
+                    <a id="signin" onclick="signin()" class="waves-effect waves-light btn"><i class="material-icons left">send</i>Send</a>
                 </div>
             </div>
         </div>
+        </div>
 
-        <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <div id="footer"></div>
+
+      <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script type='text/javascript' src="javascript/firebase.js"></script>
       <script src="javascript/auth.js"></script>
       <script src="javascript/func.js"></script>
-      <script type='text/javascript' src="javascript/firebase.js"></script>
+      <script>
+        $(document).ready(function() {  
+         $("#footer").load("footer.html");
+         });
+      </script>
     </body>
-
-    <div id="footer"></div>
 
 </html>
