--- a/web/public/index.html
+++ b/web/public/index.html
@@ -189,8 +189,8 @@
                <div class="col s12 m12 l12 xl12">
                   <div class="col s12 m3 l3 xl3">
                      <div id="libro-nov" class="card">
-                        <div class="card-image">
-                           <img src="img/sofia.jpg" alt="Sofia" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
+                        <div class="card-image" >
+                           <img id="id-sofia" src="img/sofia.jpg" alt="Sofia" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
                         </div>
                         <div class="card-content">
                            <p id="sinopsis" aria-labelledby="sinopsis">La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera,
@@ -208,7 +208,7 @@
                            <img id="id-circe" src="img/circe.jpg" alt="circe" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
                         </div>
                         <div class="card-content">
-                           <p id="sinopsis" aria-labelledby="sinopsis">En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y
+                           <p id="sinopsis" aria-labelledby="sinopsis" style="font-size:12px;">En el palacio de Helios, dios del sol y el más poderoso de los titanes, nace una niña. Pero Circe es una niña rara: carece de los poderes de su padre y
                               de la agresiva capacidad de seducción de su madre. Cuando acude al mundo de los mortales en busca de compañía, descubre que sí posee un poder,
                               el poder de la brujería, con el que puede transformar a sus rivales en monstruos y amenazar a los mismísimos dioses.
                            </p>
@@ -224,7 +224,7 @@
                            <img id="id-proposito" src="img/proposito.jpg" alt="Proposito" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
                         </div>
                         <div class="card-content">
-                           <p id="sinopsis" aria-labelledby="sinopsis">Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal
+                           <p id="sinopsis" aria-labelledby="sinopsis" style="font-size:13.5px;">Jaime Lorente nos presenta A propósito de tu boca, un poemario que lleva escribiendo desde que iba al colegio. Un texto personal
                               y sensible sobre su visión del amor y de su forma de experimentarlo y vivirlo.
                               En el libro conviven dos mundos muy extremos, uno muy blanco y otro más oscuro, que pertenecen a lo más íntimo del autor.
                            </p>
@@ -240,7 +240,7 @@
                            <img id="id-frontera" src="img/frontera.jpg" alt="Frontera" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
                         </div>
                         <div class="card-content">
-                           <p id="sinopsis" aria-labelledby="sinopsis">La guerra ha llegado a casa.
+                           <p id="sinopsis" aria-labelledby="sinopsis" style="font-size:12px;">La guerra ha llegado a casa.
                               Hace cuarenta años que Art Keller está en primera línea de fuego del conflicto más largo de la historia de EE.UU.: la guerra contra la droga.
                               Su obsesión por derrotar al capo más poderoso, rico y letal del mundo el líder del cártel de Sinaloa, Adán Barrera
                               le ha costado cicatrices físicas y mentales, tener que despedir a personas a las que amaba e incluso se ha llevado parte de su alma.
