--- a/web/public/index.html
+++ b/web/public/index.html
@@ -133,7 +133,7 @@
                </ul>
             </div>
          </div>
-         <div class="col s12 m3 l3 xl3">
+         <div class="col s12 m12 l12 xl3">
             <h1 class="categoria"> Categorias </h1>
             <ul id="categorias" class="collapsible popout" role="list" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                <li>
@@ -177,7 +177,7 @@
                   </ul>
             </div>
          </div>
-         <div class="col s12 m3 l3 xl3">
+         <div class="col s12 m12 l12 xl3">
             <h3> Calendario </h3>
             <iframe id="miiframe" area-label="link hacia google calendar" onfocus="toggleFocus(this)" onblur="toggleFocus(this)" src="https://calendar.google.com/calendar/b/2/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Atlantic%2FCanary&amp;src=cmVhZGNsdWJ1bGxAZ21haWwuY29t&amp;src=aG9uYWU0OXM4dDh1ZWs5NGp2M20zNDI0bmdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;color=%23C0CA33" style="border-width:0" width="300" height="300" frameborder="0" scrolling="no"></iframe>
          </div>
@@ -187,13 +187,13 @@
             <h1 class = "titulo-novedades"> Novedades </h1>
             <div id="libros-novedades" class="centre row">
                <div class="col s12 m12 l12 xl12">
-                  <div class="col s12 m3 l3 xl3">
+                  <div class="col s12 m12 l6 xl3">
                      <div id="libro-nov" class="card">
                         <div class="card-image" >
                            <img id="id-sofia" src="img/sofia.jpg" alt="Sofia" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
                         </div>
                         <div class="card-content">
-                           <p id="sinopsis" aria-labelledby="sinopsis">La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera,
+                           <p id="sinopsis" aria-labelledby="sinopsis" style="font-size:15px;">La anodina vida de Sofía y Daniel cambia radicalmente cuando él recibe una carta anónima en la que se le dice que Sagrario, a la que venera,
                               no es su verdadera madre y que si quiere conocer la verdad de su origen debe ir a París esa misma noche.
                            </p>
                         </div>
@@ -202,7 +202,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s12 m3 l3 xl3">
+                  <div class="col s12 m12 l6 xl3">
                      <div class="card">
                         <div class="card-image">
                            <img id="id-circe" src="img/circe.jpg" alt="circe" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
@@ -218,7 +218,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s12 m3 l3 xl3">
+                  <div class="col s12 m12 l6 xl3">
                      <div class="card">
                         <div class="card-image">
                            <img id="id-proposito" src="img/proposito.jpg" alt="Proposito" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
@@ -234,7 +234,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col s12 m3 l3 xl3">
+                  <div class="col s12 m12 l6 xl3">
                      <div class="card">
                         <div class="card-image">
                            <img id="id-frontera" src="img/frontera.jpg" alt="Frontera" role="img" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"></img>
