--- a/web/public/footer.html
+++ b/web/public/footer.html
@@ -7,7 +7,7 @@
                Somos una biblioteca digital donde podrás encontar una amplia variedad de libros, comentarlos con el resto de usuarios, apuntar eventos...
             </p>
          </div>
-         <div class="col m4 xl4 l4 offset-l1 s12">
+         <div class="col m6 offset-m3 xl4 l4 offset-l1 s12">
             <h5 class="white-text">Ubicación</h5>
             <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3506.8985774735934!2d-16.322677222337415!3d28.48260090236116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m1!1m0!5e0!3m2!1ses!2ses!4v1553097652506" frameborder="0" style="border:0" allowfullscreen></iframe>
             <p id="direccion"><i class="fas fa-map-marker-alt"></i>Camino San Francisco de Paula</p>
