--- a/web/public/login.html
+++ b/web/public/login.html
@@ -18,8 +18,10 @@
 
            gtag('config', 'UA-131489316-3');
         </script>
-        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-app.js"></script>
-        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.10.0/firebase-database.js"></script>
         <script>
                 var config = {
                     apiKey: "AIzaSyCGk645y7ZSl-e1sUHio8DRiN4ytvkMXnU",
@@ -33,12 +35,6 @@
         </script>
 
         <script>
-          $(function(){
-            $("#footer").load("footer.html");
-          });
-        </script>
-
-        <script>
          function toggleFocus(el)
          {
           el.style.backgroundColor =  el.style.backgroundColor=="yellow" ? "inherit" : "yellow";
@@ -47,7 +43,7 @@
 
     </head>
     <body>
-       <nav role="custom-dropdown" aria-label="Top Menu Bar">
+      <nav role="custom-dropdown" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
             <a href="index.html" class="brand-logo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"><img id="logo-pag" src="img/logo-b.png"></img></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -95,7 +91,7 @@
                      </div>
                   </div>
                </li>
-               </ul>  
+               </ul>   
       
       <div id="background" class="center row" role="header">
          <div class="col s12 m12 l12 xl12">
@@ -104,8 +100,8 @@
       </div>
         <div class="row">
             <div class="center row" style="min-height:600px;">
-            <h2 class="titulo-signup-libro" aria-label="Sign Up" style="font-size:30px;margin-bottom:50px;">Sign Up!</h2>
             <div class="col s8 offset-s3 m8 offset-m3 l8 offset-l3 xl4 offset-xl4">
+            <h2 class="titulo-signup-libro" aria-label="Sign Up" style="font-size:30px;margin-bottom:50px;">Sign Up!</h2>
                 <div class=formulario method="POST" action="index.html">
                     <label for="name" style="font-size:20px;">Nombre</label>
                     <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" type="text" aria-labelledby="nombre" placeholder="Juan" id="name" name="name">
@@ -144,14 +140,14 @@
 
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script type='text/javascript' src="javascript/func.js"></script>
         <script type='text/javascript' src="javascript/firebase.js"></script>
         <script type='text/javascript' src="javascript/auth.js"></script>
-        <script type='text/javascript' src="javascript/func.js"></script>
         <script>
         $(document).ready(function() {  
          $("#footer").load("footer.html");
          });
-      </script>
+         </script>
         
     </body>
 
