--- a/web/public/catalogo.html
+++ b/web/public/catalogo.html
@@ -115,7 +115,7 @@
             <div class="nav-wrapper" style="margin:20px; border:2px solid #ee6e73;border-radius:10px;box-shadow:3px 3px 3px 3px wheat;">
             <form>
             <div class="input-field">
-            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" id="search-title" type="search" onkeyup="buscar_titulo()" placeholder = "Busca algún libro por el título" required>
+            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" id="search-title" type="search" onkeyup="buscar_titulo()" placeholder = "Busca algún libro por el título" aria-placeholder = "Busca algún libro por el título"required>
             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
             <i class="material-icons">close</i>
             </div>
@@ -126,7 +126,7 @@
             <div class="nav-wrapper" style="margin:20px; border:2px solid #ee6e73;border-radius:10px;box-shadow:3px 3px 3px 3px wheat;">
             <form>
             <div class="input-field">
-            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" id="search-author" type="search" onkeyup="buscar_autor()" placeholder = "Busca algún libro por el autor" required>
+            <input onfocus="toggleFocus(this)" onblur="toggleFocus(this)" id="search-author" type="search" onkeyup="buscar_autor()" placeholder = "Busca algún libro por el autor" aria-placeholder = "Busca algún libro por el autor" required>
             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
             <i class="material-icons">close</i>
             </div>
