--- a/web/public/index.html
+++ b/web/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
    <head>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
       <title>Club de la Lectura</title>
@@ -61,7 +61,7 @@
    <body>
       <nav role="custom-dropdown" aria-label="Top Menu Bar">
          <div class="nav-wrapper">
-            <a href="index.html" class="brand-logo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"><img id="logo-pag" src="img/logo-b.png"></img></a>
+            <a href="index.html" class="brand-logo" onfocus="toggleFocus(this)" onblur="toggleFocus(this)"><img id="logo-pag" src="img/logo-b.png" alt="logo club de lectura"></img></a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down" id="barra" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">
                <li><a href="catalogo.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Catálogo</a></li>
@@ -93,8 +93,8 @@
                <li><a href="login.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Sign Up</a></li>
                <li><a href="signup.html" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log In</a></li>
                <li><a href="#!" id="logout" role="menuitem" tabindex="0" aria-expanded="false" onfocus="toggleFocus(this)" onblur="toggleFocus(this)">Log Out</a></li>
-               </ul>   
-      
+               </ul>
+
       <div id="background" class="center row" role="header">
          <div class="col s12 m12 l12 xl12">
             <h1 class="titulo" aria-label="titulo">Club De Lectura</h1>
@@ -255,7 +255,7 @@
           M.Datepicker.init(Calender,{});
       </script>
       <script>
-        $(document).ready(function() {  
+        $(document).ready(function() {
          $("#footer").load("footer.html");
          });
       </script>
