arreglando pequeno fallo

--- a/web/public/añadirlibros.html
+++ b/web/public/añadirlibros.html
@@ -117,12 +117,12 @@
                     <span id="alerta-isbn" role="tooltip"aria-live="assertive"> </span>
                     <form action="#" method="post" enctype="multipart/form-data">
                      <div class="file-field input-field">
-                        <div class="btn waves-effect waves-teal">
+                        <div class="btn">
                         <span>Imagen</span>
                         <input type="file">
                         </div>
                         <div class="file-path-wrapper">
-                        <input id="imagen-libro" class="file-path validate" type="file" aria-label="Añadir imagen del libro" onchange="loadImageFile();" placeholder="Añadir imagen del libro" style="max-heigth:300px;">
+                        <input id="imagen-libro" class="file-path validate" type="file" aria-label="Añadir imagen del libro" onchange="loadImageFile();" placeholder="Añadir imagen del libro">
                         <img id="img-libro" src="" alt="">
                         </div>
                      </div>
